<?xml version="1.0"?>
<package format="2">
  <name>fanuc_grinding_path_planning</name>
  <version>0.0.0</version>
  <description>Path Planning of grinding demonstrator</description>
  <author>Kévin Bolloré, Victor Lamoine - Institut Maupertuis</author>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>bezier_library</depend>
  <depend>genmsg</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>roscpp</depend>
  <depend>rviz_visual_tools</depend>
  <depend>std_msgs</depend>
  <depend>tf_conversions</depend>
  <depend>visualization_msgs</depend>
</package>
