<?xml version="1.0"?>
<package format="2">
  <name>fanuc_grinding_post_processor</name>
  <version>0.0.0</version>
  <description>Post Processor of grinding demonstrator</description>
  <author>Kévin Bolloré, Victor Lamoine - Institut Maupertuis</author>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen_conversions</depend>
  <depend>fanuc_post_processor</depend>
  <depend>genmsg</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
</package>
