<?xml version="1.0"?>
<package format="2">
  <name>fanuc_grinding_publish_meshfile</name>
  <version>0.0.0</version>
  <description>Publish meshfile as marker in grinding demonstrator</description>
  <author>Kévin Bolloré, Victor Lamoine - Institut Maupertuis</author>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>genmsg</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
</package>
