<?xml version="1.0"?>
<package format="2">
  <name>fanuc_grinding_scanning</name>
  <version>0.0.0</version>
  <description>Scanning part of grinding demonstrator</description>
  <author>Kévin Bolloré, Victor Lamoine</author>
  <maintainer email="victor.lamoine@institutmaupertuis.fr">Victor Lamoine</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>fanuc_grinding_publish_meshfile</depend>
  <depend>genmsg</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf_conversions</depend>

  <exec_depend>fanuc_r1000ia_sls_2_grinding_moveit_config</exec_depend>
</package>
